--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "php": "^8.2",
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-        "spatie/laravel-csp": "^2.10"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.6",
